--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
  [
    {clickhouse, {git, "https://github.com/tlchun/clickhouse.git", {branch, "master"}}},
    {tdengine, {git, "https://github.com/tlchun/tdengine.git", {branch, "master"}}},
-   {odbc, {git, "https://github.com/tlchun/emqx_odbc.git", {branch, "master"}}},
+#   {odbc, {git, "https://github.com/tlchun/emqx_odbc.git", {branch, "master"}}},
    {dolphinc, {git, "https://github.com/emqx/dolphinc.git", {tag, "0.1.2"}}},
    {jamdb_oracle, {git, "https://github.com/erlangbureau/jamdb_oracle", {tag, "0.4.2"}}}
 
